Fix BufferingIndicator.
It is not visible. Fix the style to make it visible. Change CSS mask to
a more classic CSS background
in order to hopefully prevent
cross-platform issues with a stuck
spinner.

--- a/src/themes/pp-ui-base-theme.css
+++ b/src/themes/pp-ui-base-theme.css
@@ -281,9 +281,7 @@
 }
 
 .pp-ui-spinner-loading .pp-ui-icon {
-    -webkit-mask: var(--pp-ui-icon-spinner);
-    mask: var(--pp-ui-icon-spinner);
-    background-color: var(--pp-fg-color);
+    background: var(--pp-ui-icon-spinner);
     width: 100%;
     height: 100%;
     visibility: visible;
@@ -663,7 +661,6 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    height: fit-content;
 }
 
 .pp-ui-enabled {
